tests/syntax/good/expr_assign3.c
void f() {

*x[4] = &f(3);

}

