tests/syntax/bad/instr_empty_fail0.c

void f () {

x =;4;

}



